plugins {
    id 'java'
    id 'org.springframework.boot' version '3.4.6'
    id 'io.spring.dependency-management' version '1.1.7'
}

group = 'com.dao'
version = '0.0.1-SNAPSHOT'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(17)
    }
}

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

repositories {
    mavenCentral()
}

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.springframework.boot:spring-boot-starter-data-redis'
    implementation 'org.springframework.boot:spring-boot-starter-security'
    implementation 'org.springframework.boot:spring-boot-starter-validation'
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.mybatis.spring.boot:mybatis-spring-boot-starter:3.0.4'
    compileOnly 'org.projectlombok:lombok'
    developmentOnly 'org.springframework.boot:spring-boot-devtools'
    runtimeOnly 'org.mariadb.jdbc:mariadb-java-client'
    annotationProcessor 'org.projectlombok:lombok'
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testImplementation 'org.mybatis.spring.boot:mybatis-spring-boot-starter-test:3.0.4'
    testImplementation 'org.springframework.security:spring-security-test'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'

    //jwt 관련 의존성 추가
    implementation 'io.jsonwebtoken:jjwt-api:0.12.6'
    runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.12.6'
    runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.12.6'

    // swagger 관련 의존성 추가
    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.8.6'

    //modelmapper 의존성 추가
    implementation 'org.modelmapper:modelmapper:3.2.1'

    // ip 로그인
    // https://mvnrepository.com/artifact/com.github.seancfoley/ipaddress
    implementation 'com.github.seancfoley:ipaddress:5.5.0'

    // AWS S3 SDK 의존성 추가
    implementation 'software.amazon.awssdk:s3:2.31.63'

    //메일 관련 의존성 추가
    implementation 'org.springframework.boot:spring-boot-starter-mail'
    implementation 'com.sun.mail:jakarta.mail:2.0.1'

    //thymeleaf (이메일 양식)
    implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
    // AWS CloudFront SDK 의존성 추가
    implementation 'software.amazon.awssdk:cloudfront:2.31.65'

    // CloudFront Signed URL 생성 시 경로 내 한글/공백 등의 인코딩 문제를 방지하기 위해 URIBuilder 사용
    implementation 'org.apache.httpcomponents:httpclient:4.5.13'

    // Kafka 클라이언트 라이브러리 의존성 추가
    implementation 'org.springframework.kafka:spring-kafka'
}

tasks.named('test') {
    useJUnitPlatform()
}
